vendored_parsers/tree-sitter-vim/test/corpus/augroup_statement.txt
================================================================================
Simple augroup
================================================================================

augroup test

--------------------------------------------------------------------------------

(script_file
  (augroup_statement
    (augroup_name)))

================================================================================
Augroup bang
================================================================================

augroup! test

--------------------------------------------------------------------------------

(script_file
  (augroup_statement
    (bang)
    (augroup_name)))

================================================================================
Augroup with _
================================================================================

augroup foo_bar

--------------------------------------------------------------------------------

(script_file
  (augroup_statement
    (augroup_name)))
