vendored_parsers/tree-sitter-vim/test/corpus/colorscheme_statement.txt
================================================================================
Colorscheme alone
================================================================================

colorscheme

--------------------------------------------------------------------------------

(script_file
  (colorscheme_statement))

================================================================================
Colorscheme named
================================================================================

colorscheme kanagawa

--------------------------------------------------------------------------------

(script_file
  (colorscheme_statement
    (name)))

================================================================================
Colorscheme weird
================================================================================

colorscheme kana_{}.gawa

--------------------------------------------------------------------------------

(script_file
  (colorscheme_statement
    (name)))
