vendored_parsers/tree-sitter-vim/test/corpus/normal_statement.txt
================================================================================
Simple normal
================================================================================
normal abc

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (commands)))

================================================================================
Normal with spaces
================================================================================

normal abc defg

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (commands)))

================================================================================
Normal with pipe
================================================================================

normal abc|def

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (commands)))

================================================================================
Normal space pipe
================================================================================

normal abd | def | g

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (commands)))

================================================================================
Normal backslash
================================================================================

normal abc\

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (commands)))

================================================================================
Multiple normals
================================================================================

normal abc
normal def

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (commands))
  (normal_statement
    (commands)))

================================================================================
Range normal
================================================================================

%normal foo

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (range
      (file))
    (commands)))

================================================================================
normal with bang
================================================================================

normal! foo

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (bang)
    (commands)))

================================================================================
Range normal with bang
================================================================================

%normal! foo

--------------------------------------------------------------------------------

(script_file
  (normal_statement
    (range
      (file))
    (bang)
    (commands)))
