vendored_parsers/tree-sitter-vim/test/corpus/range_statement.txt
================================================================================
Range simple
================================================================================

%

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (file)))

================================================================================
Range one line
================================================================================

1

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (integer_literal)))

================================================================================
Range two line
================================================================================

1,39

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (integer_literal)
    (integer_literal)))

================================================================================
Range two lines with ;
================================================================================

1;39

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (integer_literal)
    (integer_literal)))

================================================================================
Range line and eof
================================================================================

1,$

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (integer_literal)
    (last_line)))

================================================================================
Range marks
================================================================================

'a

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (mark)))

================================================================================
Range patterns
================================================================================

/foobar/,'b
?barfoo?;'c

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (pattern)
    (mark))
  (range_statement
    (pattern)
    (mark)))

================================================================================
Range last pattern
================================================================================

\/,\?

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (previous_pattern)
    (previous_pattern)))

================================================================================
Range +
================================================================================

+

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (next_line)))

================================================================================
Range pattern with missing end
================================================================================

/abc

--------------------------------------------------------------------------------

(script_file
  (range_statement
    (pattern)))
