vendored_parsers/tree-sitter-vim/test/corpus/scriptencoding_statement.txt
================================================================================
Simple scriptencoding
================================================================================

scriptencoding
scriptencoding utf-8
scriptencoding latin1

--------------------------------------------------------------------------------

(script_file
  (scriptencoding_statement)
  (scriptencoding_statement
    (encoding))
  (scriptencoding_statement
    (encoding)))
