vendored_parsers/tree-sitter-vim/test/corpus/silent.txt
================================================================================
Basic silent
================================================================================

silent echo "bar"

--------------------------------------------------------------------------------

(script_file
  (silent_statement
    (echo_statement
      (string_literal))))

================================================================================
Partial silent
================================================================================

sil echo "bar"

--------------------------------------------------------------------------------

(script_file
  (silent_statement
    (echo_statement
      (string_literal))))

================================================================================
Partial silent bang
================================================================================

sil! echo "bar"

--------------------------------------------------------------------------------

(script_file
  (silent_statement
    (bang)
    (echo_statement
      (string_literal))))

================================================================================
Silent bang
================================================================================

silent! echo "bar"

--------------------------------------------------------------------------------

(script_file
  (silent_statement
    (bang)
    (echo_statement
      (string_literal))))
