vendored_parsers/tree-sitter-vim/test/corpus/source_statement.txt
================================================================================
Source alone
================================================================================

source

--------------------------------------------------------------------------------

(script_file
  (source_statement))

================================================================================
Source filename
================================================================================

source path/to/sourced_file.src

--------------------------------------------------------------------------------

(script_file
  (source_statement
    file: (filename)))

================================================================================
Source banged
================================================================================

source! path/to/sourced_file.src

--------------------------------------------------------------------------------

(script_file
  (source_statement
    (bang)
    file: (filename)))

================================================================================
Source range
================================================================================

1,10source path/to/sourced_file.src

--------------------------------------------------------------------------------

(script_file
  (source_statement
   range: (range
      start: (integer_literal)
      end: (integer_literal))
    file: (filename)))
